--- a/profile.css
+++ b/profile.css
@@ -10,10 +10,11 @@ copyright 2019
 *{
     font-family: 'Ubuntu', sans-serif;
     text-align: center;
+    color: white;
 }
 
 html{
-    background-image: url('resources/backgroundblue.jpg');
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.45), rgba(0,0,0,0.2)), url('resources/backgroundBridge.jpg');
     height: 100%; 
     background-position: center;
     background-repeat: no-repeat;
@@ -24,6 +25,7 @@ h1{
     margin-top: 10%;
     font-size: 40pt;
     line-height: 20%;
+    /* text-shadow: 1px 1px 3px #000000; */
 }
 
 .right{
@@ -43,52 +45,44 @@ h1{
     width: 30px;
 }
 
-/* .boxes{
-    background-color: cadetblue;
-    color: white;
-    padding: 14px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-} */
-
 th{
     background-color: cadetblue;
-    padding: 14px 25px;
+    padding: 2%;
+    /* padding: 14px 25px; */
     text-align: center;
+    font-size: 1.4vw;
     width:25%;
-    border-style: solid;
-    border-color: #dcf2f3;
-    border-width: 5px;
+    /*border-style: solid;
+    border-color: #000000a1;
+    border-width: 3px;*/
     display: inline-block;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .bio{
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 20%;
+    margin-right: 20%;
+    text-shadow: 2px 1px 2px #000000;
 }
 
 table{
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    width: 65%;
 }
 
-.boxes{
-    color: white;
-}
 
 th:hover{
-    background-color: aquamarine;
+    background-color:rgba(24, 105, 105, 0.842);
+    padding: 3%;
+    /* padding: 24px 35px; */
     text-decoration: underline;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 
 a.boxes:link, a.boxes:visited{
     text-decoration: none;    
 }
-
-/* a.boxes:hover {
-    text-decoration: underline;
-    background-color: aquamarine;
-} */
