--- a/profile.css
+++ b/profile.css
@@ -17,9 +17,18 @@ html{
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.45), rgba(0,0,0,0.2)), url('resources/backgroundBridge.jpg');
     height: 100%; 
     background-position: center;
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat; */
     background-size: cover;
+
+    background-attachment: fixed;
 }
+
+/* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
+/* @media only screen and (max-device-width: 1366px) {
+    html {
+      background-attachment: scroll;
+    }
+} */
 
 h1{
     margin-top: 10%;
@@ -41,9 +50,9 @@ h1{
     padding-bottom: 2.5px;
 }
 
-#li{
+/* #li{
     width: 30px;
-}
+} */
 
 th{
     background-color: cadetblue;
