quick grad and resume update

--- a/profile.css
+++ b/profile.css
@@ -86,7 +86,7 @@ th:hover{
     background-color:rgba(24, 105, 105, 0.842);
     padding: 3%;
     /* padding: 24px 35px; */
-    text-decoration: underline;
+    /* text-decoration: underline; */
     margin-top: 0px;
     margin-bottom: 0px;
 }
