--- a/css/capstone.css
+++ b/css/capstone.css
@@ -2,13 +2,14 @@ div.body{
     background-color: rgba(255,255,255,0.7);
     margin-left: 12%;
     margin-right: 12%;
+    margin-top: 2em;
     margin-bottom: 2em;
     border-style: ridge;
     overflow: auto;
 }
 
 #capLogo{
-    margin-top: 3em;
+    margin-top: 1.3em;
     margin-bottom: 1em;
     width: 100%;
     /* height: 10%; */
@@ -28,7 +29,6 @@ div.body{
 }
 
 h3{
-    font-size: 1.3em;
     margin-top: 1em;
     color: #1B2D2F;
     text-shadow: 1px 0px 3px #FFFFFF;
@@ -37,7 +37,21 @@ h3{
 progress{
     -webkit-appearance: none;
     appearance: none;
-    background: orangered;
+    height: 1.3em;
+    min-width: 25%;
+    
+}
+
+progress::-webkit-progress-bar {
+    background-color: #f37a39;
+    border: solid 2px #000000;
+}
+progress::-webkit-progress-value {
+    background-color: #f37a39;
+    box-shadow: 2px 2px 3px #000000;
+}
+  progress::-moz-progress-bar {
+    background-color: #f37a39;
 }
 
 .code{
@@ -62,17 +76,31 @@ table{
     color: #1B2D2F;
 }
 
-th{
-    background-color: #f37a39;
-    width: 90%;
-    margin-top: 1%;
-    margin-bottom: 1%;
+.capstoneTable{
+    /* border-spacing: 0em 1em; */
+    font-weight: bold;
 }
 
-th:hover{
+.capstoneTable td{
+    background-color: #f37a39;
+    display: inline-block;
+    width: 90%;
+
+    /* padding-top: 15px;
+    padding-bottom: 15px; */
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.capstoneTable td:hover{
     background-color:#ff5900;
     cursor: pointer;
     text-decoration: none;
+
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 
@@ -102,6 +130,7 @@ h4{
 
 .projTable td{
     background-color: rgba(33, 83, 94, 0.8);
+    padding: 1.3em;
 }
 
 .projTable td:hover{
