--- a/css/other.css
+++ b/css/other.css
@@ -196,6 +196,13 @@
     color:#FFFFFF;
     text-shadow: 1px 1px 3px #1B2D2F;
 }
+
+@media only screen and (max-width: 768px) {
+    .docSkillsList li{
+        width: 45%;
+    }
+}
+
 .fa.fa-laptop,.fa.fa-pencil,.fa.fa-wrench,.fa.fa-bullhorn,.fa.fa-bar-chart, .fa.fa-camera-retro{
     font-size: 45px;
     height: 45px;
@@ -248,7 +255,7 @@
 .slide-3x{
     display: inline-block;   
     width: 33.3%;
-    background-color: rgba(27, 45, 47, 0.6);
+    background-color: rgba(27, 45, 47, 0.55);
     padding-top: 16px;
     padding-bottom: 16px;
     box-shadow: 0px 0px 7px cadetblue;
@@ -257,13 +264,38 @@
 .slide-img-3x{
     max-height: 400px;
     border: 1px solid #F0803C;
+    min-width: 0px;
+    z-index: -1;
 }
 
 .nonfocus img{
-    opacity: 0.7;
+    /* opacity: 0.55; */
     max-height: 350px;
 }
 .focused{
     border: 2px solid #1B2D2F;
     background-color: #1b2d2f;
+    z-index: 0;
+    
+}
+
+@media only screen and (max-width: 768px) {
+.nonfocus{
+    display: none;
+}   
+
+.focused{
+    width: 100%;
+}
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1050px) {
+    
+    .slide-img-3x{
+        max-width: 175px;
+    }
+    
+    .nonfocus img{
+        max-width: 150px;
+    }
 }
