--- a/css/other.css
+++ b/css/other.css
@@ -9,6 +9,12 @@
     margin-top: 4em;
 }
 
+@media only screen and (max-width: 768px) {
+    .freelanceLogo{
+        max-width: 200px;
+    }
+}
+
 .logoLabel{
     display: inline-block;
     font-size: 1em;
@@ -84,18 +90,30 @@
 }
 .availFlex div{
     min-width: 2em;
+    min-height: 2em;
     background-color: cadetblue;
 }
 .availFlex p{
     color:#1B2D2F;
     margin-left: 1em;
+    margin-right: 1em;
 }
 .contactButton{
     /* margin-bottom: 4em; */
     margin-left: 1em;
     margin-right: 1em;
-    width: 45%;
+    width: 55%;
 }
+
+@media only screen and (max-width: 768px) {
+    .availFlex{
+        flex-direction: column;
+    }
+    .contactButton{
+        width: auto;
+    }
+}
+
 .boxed{
     display: inline-block;
 }
@@ -128,9 +146,9 @@
     list-style-position: outside;
     /* width: 36%; */
     /* list-style-position: inside; */
-    margin-left: 10px;
-    margin-right: 10px;
-    padding: 0em 2em 2em 2em;
+    /* margin-left: 10px;
+    margin-right: 10px; */
+    padding: 0em 2em 1.25em 2em;
     
 
     background-color: rgb(255, 255, 255);
@@ -150,6 +168,7 @@
 .digLogoBlock{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 
@@ -199,7 +218,19 @@
 
 @media only screen and (max-width: 768px) {
     .docSkillsList li{
-        width: 45%;
+        width: 65%;
+    }
+    
+}
+@media only screen and (max-width: 400px) {
+    .digList ul.clientList{
+        padding: 0em 0em 1.25em 2em;
+        border-left: 1em solid cadetblue;
+    }
+
+    .digList h4{
+        text-align: left;
+        margin-right: 1em;
     }
 }
 
@@ -262,14 +293,17 @@
 }
 
 .slide-img-3x{
-    max-height: 400px;
+    /* max-height: 400px; */
     border: 1px solid #F0803C;
     min-width: 0px;
     z-index: -1;
+    
+    max-height: 350px;
 }
 
-.nonfocus img{
-    /* opacity: 0.55; */
+
+/* .nonfocus img{
+    opacity: 0.55;
     max-height: 350px;
 }
 .focused{
@@ -277,25 +311,40 @@
     background-color: #1b2d2f;
     z-index: 0;
     
+} */
+
+.slide-3x:nth-child(2){
+    border: 2px solid #1B2D2F;
+    background-color: #1b2d2f;
+    z-index: 0; 
+}
+.slide-3x:nth-child(2) img{
+    max-height: 400px;
+}
+@media only screen and (max-width: 400px){
+    .slide-container-3x{
+        margin-left: 5px;
+        margin-right: 5px;
+    }
 }
 
 @media only screen and (max-width: 768px) {
-.nonfocus{
-    display: none;
-}   
+    .slide-3x:nth-child(1), .slide-3x:nth-child(3){
+        display: none;
+    }   
 
-.focused{
-    width: 100%;
-}
+    .slide-3x:nth-child(2){
+        width: 100%;
+    }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1050px) {
     
     .slide-img-3x{
-        max-width: 175px;
+        max-width: 150px;
     }
     
-    .nonfocus img{
-        max-width: 150px;
+    .slide-3x:nth-child(2) img{
+        max-width: 175px;
     }
 }
