--- a/css/profile.css
+++ b/css/profile.css
@@ -182,10 +182,10 @@ a.activePage{
     border-bottom: 4px solid #F0803C;
 }
 
-.navBar img{
+/* .navBar img{
     height: 0.9em;
     width: 0.9em;
-}
+} */
 
 .dropdown{
     width: 25%;
@@ -211,8 +211,44 @@ a.activePage{
     width: 24.65%;
 }
 
-.dropdown:hover .dropContent{
+@media screen and (min-width:769px){
+    .dropdown:hover .dropContent{
+        display: flex;
+    }
+}
+.dropVisible{
     display: flex;
+}
+
+/*Mobile nav*/
+#menuIcon{
+    display: none;
+}
+@media only screen and (max-width: 768px) {
+    .navBar a{
+        display: none;
+    }
+    #menuIcon{
+        display:block;
+        width: 100%;
+    }
+    .navBar.responsive {
+      display: block;
+    }
+
+    .navBar.responsive a{
+        display: block;
+        width: 100%;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+    .dropdown{
+        width: 100%;
+    }
+    .dropContent{
+        width: 100%;
+        position: relative;
+    }
 }
 
 /* General Image Styling*/
@@ -227,6 +263,7 @@ a.activePage{
 @media only screen and (max-width: 768px) {
     .imgGeneral{
         max-height: 200px;
+        max-width: 96%;
     }
 }
 
@@ -278,6 +315,10 @@ button:hover{
     .homeIconBoxes{
         margin: 5px;
     }
+
+    .collabContainer{
+        margin: 25px 0px;
+    }
 }
 .fa.collabIcons{
     font-size: 45px;
@@ -320,6 +361,13 @@ body{
     margin-left: 12%;
     margin-right: 12%;
     /* height:30%; */
+}
+
+@media only screen and (max-width: 768px) {
+    .slide-container{
+        margin-left: 5px;
+        margin-right: 5px;
+    }    
 }
 .slide{
     /* height:100%; */
